please fix jumpyness

--- a/src/mint/kip-website/js/components/Showcase/Showcase.scss
+++ b/src/mint/kip-website/js/components/Showcase/Showcase.scss
@@ -12,7 +12,7 @@
 	}
 
 	.phone {
-		position: relative;
+		position: absolute;
 		height: 800px;
 		width: 425px;
 		background-size: contain;
